[EXT] Popup overflow solved

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,20 @@
 
 html,
 body {
-  width: 600px;
-  height: 800px;
+  width: 500px;
+  height: 600px;
+  min-width: 500px;
+  min-height: 600px;
+  max-width: 500px;
+  max-height: 600px;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
